flex/07-flex-layout-2/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;
  display: flex;
  flex-flow: column;
  flex-wrap: wrap;
  justify-content: space-between;
}

.header {
  height: 72px;
  background: darkmagenta;
  color: white;
  font-size: 22px;
}

.footer {
  height: 72px;
  background: #eee;
  color: darkmagenta;
  display: flex;
  justify-content: center;
  align-items: center;
}

.sidebar {
  width: 300px;
  background: royalblue;
  box-sizing: border-box;
  display: flex;
  justify-content: flex-start;
  align-items: stretch;
}

.card {
  border: 1px solid #eee;
  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
  border-radius: 4px;
  display: flex;
  flex-wrap: wrap;
  flex-grow: 1;
  flex-basis: 200px;
  gap: 3px;
}

.container{
  flex-direction: row;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

